# test-mcp-server-from-scratch

./: LICENSE  pyproject.toml
src/mcp_trends/: __init__.py  server.py  tools.py  trends.py
